--- a/settings.toml.example
+++ b/settings.toml.example
@@ -2,6 +2,34 @@
 token = "super.long.token-string"  # Discord bot token
 vnyan_socket = "ws://127.0.0.1:8000/vnyan"  # URL for VNyan websocket
 
+[commands]
+# The key is what to look for from discord after the =
+# If value is a string, it's the help text
+# If it is a dict it can have the following keys:
+# * help - text about command
+# * ws - raw command to send over web socket
+# * arg - "<str>" or "<int>" or none
+c11 = "Top Left Camera"
+c12 = "Top Center Camera"
+c13 = "Top Right Camera"
+c21 = "Center Left Camera"
+c22 = "Center Center Camera"
+c23 = "Center Right Camera"
+c24 = "Center Center Closeup Camera"
+c25 = "Center Center Distant Camera"
+c31 = "Bottom Left Camera"
+c32 = "Bottom Center Camera"
+c33 = "Bottom Right Camera"
+spin_streamer = {"ws" = "spin", "help" = "Spin the streamer"}
+
+[commands.follow]
+help = "Test command to send a follow action, add string to attach"
+arg = "<str>"
+
+[commands.zoom]
+help = "Change the zoom on the camera"
+arg = "<int>"
+
 [guilds.123456789012345678]  # Guild ID number to use
 roles = [123456789012345678]  # Comma separated list of roles
 channels = [123456789012345678]  # Comma separated list of channels to listen in
