--- a/settings.toml.example
+++ b/settings.toml.example
@@ -25,7 +25,7 @@ spin_streamer = {ws="spin", help="Spin the streamer"}
 
 [commands.follow]
 help = "Test command to send a follow action, add string to attach"
-arg = [str]"
+arg = "[str]"
 
 [commands.zoom]
 help = "Change the zoom on the camera"
